# mimi

./: .gitignore  AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.zh.md  SECURITY.md  build.rs  clippy.toml  core_basic_control  core_closures  core_enums_match  core_functions_recursion  core_generics_adt  core_newtype  core_option_result  core_records  meta_comptime_quote  meta_contracts  scratch_lexer.mimi  std_fs  std_prelude  test_tokenizer.mimi
.github/workflows/: ci.yml  release.yml
benches/: README.md  codegen.rs  interp.rs  parser.rs
demos/: 01_basics.mimi  02_control_flow.mimi  03_functions.mimi  04_adt_match.mimi  05_lists.mimi  06_strings.mimi  07_error_handling.mimi  08_algorithms.mimi  09_io_files.mimi  10_utilities.mimi  11_advanced.mimi  12_generics_fp.mimi  13_actors.mimi  14_ffi.mimi  14_task_mgr.mimi  15_task_mgr.mimi
devdocs/: bootstrap-plan.md  idd-guide.md
devdocs/adr/: 001-memory-model.md  002-contract-system.md  003-concurrency-model.md  004-dual-backend.md
devdocs/v0.31/: 01-foundation.md  02-flow-runtime.md  03-verified-core.md  04-component-boundary.md  05-migration-tooling.md  06-audit-debug-rc.md  README.md  requirements-matrix.md  roadmap.toml
docs/: 2.md  Mimi多语言胶水特性文档.md  actor-spec.md  ast-appendix.md  bootstrap-plan.md  comprehensive-gap-audit.md  design-decisions.md  error-codes.md  ffi-glue.md  ffi-guide.md  ffi-ownership-abi-roadmap.md  ffi-ownership-abi.md  ffi-type-mapping.md  idd-guide.md  language-requirements.toml  language-spec.md  language-support.toml  mimi-issues.md  mimi.md  mimigramma.md  mimispec-dependency-audit.md  mimispec.md  quoted-ast-abi.md  registry-protocol.md  syntax-reference.md
docs/archive/: 0_7_0eval.md  AUDIT-REPORT.md  comprehensive-gap-audit.md  design-decisions.md  ffi-glue.md  ffi-ownership-abi-implementation-summary.md  ffi-ownership-abi-roadmap.md  future-vision.md  mimi.md  mimi_ffi_rt.h  mms-integration.md  product-strategy.md  (+1 more)
examples/: actor_test.mimi  arena_test.mimi  benchmark.mimi  calculator.mimi  cap_test.mimi  design.mms  ffi_verification.mimi  fib.mimi  guess.mimi  hello  hello.mimi  http_server.mimi  newtype.mimi  parasteps_on_failure_test.mimi  records.mimi  ref_type_test.mimi  shapes.mimi  try_operator.mimi  wc.mimi
mimispec/: architecture.mms
projects/: README.md
readme/: 00-index.md  01-syntax.md  06-modules.md  07-cli.md  08-examples.md
scripts/: check_language_docs.py  check_unsafe_safety.py  check_v031_roadmap.py  error_coverage.py  fuzz-common.sh  fuzz-dual-path.sh  fuzz-exhaustive.sh  fuzz-syntax.sh  gen_stdlib_docs.py  mms-consistency.sh  refactor_builtins_mod.py  run-ci-matrix.sh  safe-test.sh  setup-llvm-wrapper.sh  split_register_runtime.py  stress-test.sh  test-ffi-contracts.sh  verify-lsp.py  verify-lsp.sh
src/: ast.rs  contracts.rs  core.rs  doc_core.rs  error.rs  flow_matrix.rs  fmt.rs  interp.rs  lexer.rs  lib.rs  lint.rs  loader.rs  lockfile.rs  lsp.rs  macros.rs  main.rs  manifest.rs  parser.rs  path_safety.rs  pkg_registry.rs  pkg_resolve.rs  progressive.rs  safe_arith.rs  session.rs  source_scan.rs  span.rs  tests.rs  trace.rs  verifier.rs
std/: array.mimi  collections.mimi  crypto.mimi  csv.mimi  datetime.mimi  env.mimi  fs.mimi  io.mimi  iter.mimi  json.mimi  maps.mimi  mimispec_lexer.mimi  mymath.mimi  net.mimi  prelude.mimi  random.mimi  result.mimi  set.mimi  string.mimi  strings.mimi  template.mimi  testing.mimi  text.mimi
tests/: real_world.rs  real_world_cli.rs
(+551 files in other folders)
