[package]
name = "mimi"
version = "0.7.0"
edition = "2021"
rust-version = "1.75"
authors = ["OntomimiSE Contributors"]
description = "Mimi language reference implementation (Rust)"
license = "Apache-2.0"

[[bin]]
name = "mimi"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
z3 = "0.20.0"
inkwell = { version = "0.5", features = ["llvm18-0"] }
mimispec = { path = "../mimispec" }
semver = "1.0"
libc = "0.2"
thiserror = "2"
libffi = { version = "4.1", features = ["system"] }

[features]
default = []
no_std = []

[build-dependencies]
cc = "1.0"

[dev-dependencies]
proptest = "1"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
